# APalysis-2

./: .gitignore  pyproject.toml
examples/: mixed_nodes_viz.py  test_visualize.py
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/lib/: api.ts  index.ts  layout.ts  stores.ts  types.ts  utils.ts
frontend/src/lib/components/: Graph.svelte
frontend/src/lib/components/edges/: BackEdge.svelte
frontend/src/lib/components/nodes/: BaseNode.svelte  FunctionNode.svelte  GroupNode.svelte  ModuleNode.svelte  TensorNode.svelte  index.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
src/apalysis/: __init__.py  graph.py  parser.py  server.py
src/apalysis/_static/: index.html
src/apalysis/_static/_app/: version.json
src/apalysis/_static/_app/immutable/assets/: 0.C27Iropz.css  2.BIOfvrDz.css
src/apalysis/_static/_app/immutable/chunks/: 4Je95S0l.js  B7iQb1Uj.js  B9iwZJAp.js  BrG4Cwkn.js  C_Obh7jo.js  D9Dz2L7n.js  DcOW9j_8.js  oEV89-9c.js
src/apalysis/_static/_app/immutable/entry/: app.DJ0u707_.js  start.C7Rx9K9b.js
src/apalysis/_static/_app/immutable/nodes/: 0.CR89R7Ui.js  1.DybRUJf-.js  2.BcFKsiVb.js
