[project]
name = "apalysis"
version = "0.1.0"
description = "Interactive PyTorch model visualization tool"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchview",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "networkx>=3.0",
    "graphviz>=0.20",
]

[tool.uv.sources]
torchview = { path = "../torchview", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/apalysis"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
